; ModuleID = '/home/carl/AnghaBench/micropython/ports/powerpc/extr_uart_lpc_serial.c_lpc_uart_read.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/powerpc/extr_uart_lpc_serial.c_lpc_uart_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@REG_THR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local signext i8 @lpc_uart_read() #0 {
  br label %1

1:                                                ; preds = %4, %0
  %2 = call i64 (...) @lpc_uart_rx_empty()
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %5

4:                                                ; preds = %1
  br label %1

5:                                                ; preds = %1
  %6 = load i32, i32* @REG_THR, align 4
  %7 = call signext i8 @lpc_uart_reg_read(i32 %6)
  ret i8 %7
}

declare dso_local i64 @lpc_uart_rx_empty(...) #1

declare dso_local signext i8 @lpc_uart_reg_read(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
